<resources>
    <string name="app_name">My Companion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="coding_calendar">Coding Calendar</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="authority">com.example.srv_twry.studentcompanion</string>
    <string name="participate">Participate</string>
    <string name="contest_click_message">Click on a Contest for details</string>
    <string name="enter_topic_name">Enter topic name</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="add">Add</string>
    <string name="add_flash_card_topics">Add topics</string>
    <string name="importance">Importance</string>
    <string name="enter_your_question">Enter your Question</string>
    <string name="question">Question</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="answer">Answer</string>
    <string name="pdf_creator">PDF Creator</string>
    <string name="created_pdf">CreatedPDFs</string>
    <string name="create_pdf">Create PDF</string>
    <string name="select_images">Select Images</string>
    <string name="create_pdf_button_text">Create PDF</string>
    <string name="title_pdf_options">PDF Options</string>
    <string name="click_on_button_to_get_started">Click on the \'+\' button to get started</string>
    <string name="click_on_button_to_create_pdf">Click on the \'+\' button to create pdf</string>
    <string name="share_flash_card">Share Flash card ..</string>
    <string name="share_contest">Share Contest ..</string>
    <string name="app_playstore_link"></string>
    <string name="share_this_app">Share this application ..</string>


    <array name="pdf_dialog_options">
        <item>Open File</item>
        <item>Delete File</item>
    </array>

    <array name="pdf_dialog_itemIds">
        <item>open</item>
        <item>delete</item>
    </array>
    <string name="upcoming_contests">Upcoming Contests</string>

    <!-- Ad mob ad-unit !-->
    <string name="banner_advertisement">ca-app-pub-3145580598583485/1101862058</string>
    <string name="fab_to_add_a_new_flash_card_topic">FAB to add a new Flash Card topic</string>
    <string name="fab_to_create_a_new_pdf_file">FAB to create a new pdf file</string>
    <string name="fab_to_share_a_flash_card">FAB to share a flash card</string>
    <string name="fab_to_add_a_new_flash_card">FAB to add a new Flash card</string>
    <string name="fab_to_share_the_application">FAB to share the application</string>
    <string name="fab_to_share_a_contest">FAB to share a contest</string>
    <string name="fab_to_set_or_remove_reminder_for_a_contest">FAB to set or remove reminder for a contest</string>
    <string name="both_the_fields_are_mandatory">Both the fields are mandatory !</string>
    <string name="created_the_flash_card_successfully">Created the flash card successfully</string>
    <string name="unable_to_create_the_card">Unable to create the card</string>
    <string name="please_enter_the_topic_name">Please enter the topic name !</string>
    <string name="topic_should_not_have_more_than_35_characters">Topic shouldn\'t have more than 35 characters !</string>
    <string name="created_the_topic_successfully">Created the topic successfully</string>
    <string name="unable_to_create_the_topic">Unable to create the topic</string>
    <string name="select_images_first">Select Images First!</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="images_added">Images added !</string>
    <string name="adding_images">Adding images</string>
    <string name="cannot_create_pdf_without_permissions">Cannot create pdf without Permissions!</string>
    <string name="topic_successfully_deleted">Topic successfully deleted</string>
    <string name="unable_to_delete_topic">Unable to delete topic</string>
    <string name="error_in_deleting_cards">error in deleting cards</string>
    <string name="card_deleted_successfully">Card deleted successfully</string>
    <string name="cannot_delete_card">Cannot delete card !</string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="confirm_delete">Confirm Delete...</string>
    <string name="are_you_sure_you_want_to_delete_this_card">Are you sure you want delete this card?</string>
    <string name="successfully_deleted_selected_files">Successfully deleted selected file</string>
    <string name="cannot_delete_selected_file">Cannot delete selected file</string>
    <string name="no_suitable_application_found">No suitable application found !</string>
    <string name="cannot_add_reminder">Cannot add reminder</string>
    <string name="contest_is_already_running">Contest is already running</string>
    <string name="cannot_remove_reminder">Cannot remove reminder</string>
    <string name="duration_approximately">Duration: Approximately </string>
    <string name="hours"> hours</string>
    <string name="contest_description_coding_contest_for_programming_enthusiasts">Contest Description: Coding Contest for Programming enthusiasts</string>
    <string name="contest_description">Contest Description:</string>
    <string name="check_your_internet_connection">Check your internet connection !</string>
    <string name="reminder_set_successfully">Reminder set successfully</string>
    <string name="confirm_delete_alert_dialog">Confirm Delete...</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want delete this?</string>
    <string name="hey_checkout_this_one">Hey checkout this one !   Question:</string>
    <string name="line_break_answer">Answer:</string>
    <string name="creating_pdf">Creating PDF</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="example_name">Example : Name</string>
    <string name="folder">Folder</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="camera">Camera</string>
    <string name="please_wait">Please Wait</string>
    <string name="creating_pdf_double_dot">Creating PDF...</string>
</resources>
