<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_coding_calendar"
            android:icon="@drawable/ic_coding_calendar"
            android:title="@string/coding_calendar" />
        <item
            android:id="@+id/nav_flash_cards"
            android:icon="@drawable/ic_flash_cards"
            android:title="@string/flash_cards" />
        <item
            android:id="@+id/nav_pdf_creator"
            android:icon="@drawable/ic_pdf_creator"
            android:title="@string/pdf_creator" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
